--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,13 @@
 <body>
 <div id="indicatorhead">
     <div class="indicatorblock" id="indicatorblock01">
-
+        <div class="energybar"></div>
     </div>
     <div class="indicatorblock" id="indicatorblock02">
-        
+        <div class="energybar"></div>
     </div>
     <div class="indicatorblock" id="indicatorblock03">
-        
+        <div class="energybar"></div>
     </div>
 </div>
 <div id="indicatortitle">
