--- a/src/index.html
+++ b/src/index.html
@@ -6,35 +6,97 @@
 </head>
 <body>
 <div id="indicatorhead">
-    <div class="indicatorblock" id="indicatorblock01">
-        <div class="energybar"></div>
+    <div class="indicatorblock" id="indicatorblock01" align="center">
+        <div class="barframe">
+            <div id="number_of_bugs" class="inbarframe"></div>
+        </div>
     </div>
-    <div class="indicatorblock" id="indicatorblock02">
-        <div class="energybar"></div>
+    <div class="indicatorblock" id="indicatorblock02" align="center">
+        <div class="barframe">
+            <div id="code_size" class="inbarframe"><p>12</p></div>
+        </div>
     </div>
-    <div class="indicatorblock" id="indicatorblock03">
-        <div class="energybar"></div>
+    <div class="indicatorblock" id="indicatorblock03" align="center">
+        <div class="barframe">
+            <div id="timers" class="inbarframe"><p>47</p></div>
+        </div>
+    </div>
+    <div class="indicatorblock" id="indicatorblock04" align="center">
+        <div class="barframe">
+            <div id="timers" class="inbarframe"><p>86</p></div>
+        </div>
     </div>
 </div>
 <div id="indicatortitle">
     <div class="indicatortitleblock" id="indicatortitle01">
-        <p>something</p>
+        <p>number of bugs</p>
     </div>
     <div class="indicatortitleblock" id="indicatortitle02">
-        <p>otherthing</p>
+        <p>code size</p>
     </div>
     <div class="indicatortitleblock" id="indicatortitle03">
         <p>Timers</p>
     </div>
+    <div class="indicatortitleblock" id="indicatortitle04">
+        <p>coolness</p>
+    </div>
 </div>
 <div id="leftcontent">
     <div id="player01" class="playerclass">
+        <div class="avator">
+        </div>
+        <div class="char_name">
+        </div>
+        <div class="char_health">
+        </div>
+        <div class="char_energy">
+        </div>
+        <div class="char_stress">
+        </div>
+        <div class="char_intoxication">
+        </div>
     </div>
     <div id="player02" class="playerclass">
+        <div class="avator">
+        </div>
+        <div class="char_name">
+        </div>
+        <div class="char_health">
+        </div>
+        <div class="char_energy">
+        </div>
+        <div class="char_stress">
+        </div>
+        <div class="char_intoxication">
+        </div>
     </div>
     <div id="player03" class="playerclass">
+        <div class="avator">
+        </div>
+        <div class="char_name">
+        </div>
+        <div class="char_health">
+        </div>
+        <div class="char_energy">
+        </div>
+        <div class="char_stress">
+        </div>
+        <div class="char_intoxication">
+        </div>
     </div>
     <div id="player04" class="playerclass">
+        <div class="avator">
+        </div>
+        <div class="char_name">
+        </div>
+        <div class="char_health">
+        </div>
+        <div class="char_energy">
+        </div>
+        <div class="char_stress">
+        </div>
+        <div class="char_intoxication">
+        </div>
     </div>
 </div>
 <div id="rightcontent">
