--- a/src/index.html
+++ b/src/index.html
@@ -44,58 +44,62 @@
 <div id="leftcontent">
     <div id="player01" class="playerclass">
         <div class="avator">
+            <img src="http://www.kinghim.com/image/avator1.jpg"/>
         </div>
-        <div class="char_name">
+        <div class="char_name">name 01
         </div>
-        <div class="char_health">
+        <div class="char_health">health: <p id="char_health_point_1">10</p>
         </div>
-        <div class="char_energy">
+        <div class="char_energy">energy: <p id="char_energy_point_1">20</p>
         </div>
-        <div class="char_stress">
+        <div class="char_stress">stress: <p id="char_stress_point_1">21</p>
         </div>
-        <div class="char_intoxication">
+        <div class="char_intoxication">intoxication: <p id="char_intoxication_point_1">9</p>
         </div>
     </div>
     <div id="player02" class="playerclass">
         <div class="avator">
+            <img src="http://www.kinghim.com/image/avator2.jpg" />
         </div>
-        <div class="char_name">
+        <div class="char_name">name 02
         </div>
-        <div class="char_health">
+        <div class="char_health">health: <p id="char_health_point_1">10</p>
         </div>
-        <div class="char_energy">
+        <div class="char_energy">energy: <p id="char_energy_point_1">20</p>
         </div>
-        <div class="char_stress">
+        <div class="char_stress">stress: <p id="char_stress_point_1">21</p>
         </div>
-        <div class="char_intoxication">
+        <div class="char_intoxication">intoxication: <p id="char_intoxication_point_1">9</p>
         </div>
     </div>
     <div id="player03" class="playerclass">
         <div class="avator">
+            <img src="http://www.kinghim.com/image/avator2.jpg"/>
         </div>
         <div class="char_name">
         </div>
-        <div class="char_health">
+        <div class="char_health">health: <p id="char_health_point_1">10</p>
         </div>
-        <div class="char_energy">
+        <div class="char_energy">energy: <p id="char_energy_point_1">20</p>
         </div>
-        <div class="char_stress">
+        <div class="char_stress">stress: <p id="char_stress_point_1">21</p>
         </div>
-        <div class="char_intoxication">
+        <div class="char_intoxication">intoxication: <p id="char_intoxication_point_1">9</p>
         </div>
     </div>
     <div id="player04" class="playerclass">
         <div class="avator">
+            <img src="http://www.kinghim.com/image/avator1.jpg"/>
         </div>
         <div class="char_name">
         </div>
-        <div class="char_health">
+        <div class="char_health">health: <p id="char_health_point_1">100</p>
         </div>
-        <div class="char_energy">
+        <div class="char_energy">energy: <p id="char_energy_point_1">100</p>
         </div>
-        <div class="char_stress">
+        <div class="char_stress">stress: <p id="char_stress_point_1">21</p>
         </div>
-        <div class="char_intoxication">
+        <div class="char_intoxication">intoxication: <p id="char_intoxication_point_1">9</p>
         </div>
     </div>
 </div>
