--- a/src/index.html
+++ b/src/index.html
@@ -107,5 +107,8 @@
     <div>
     </div>
 </div>
+<script src="js/jquery-2.1.4.min.js"></script>
+<script src="js/main.js"></script>
+<script src="js/code.js"></script>
 </body>
 </html>
