left content warning message

--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,8 @@
         </div>
         <div class="char_intoxication">intoxication: <p id="char_intoxication_point_1">9</p>
         </div>
+        <div class="char_warning"><p id="char_warning_msg_1">drunk!</p>
+        </div>
     </div>
     <div id="player02" class="playerclass">
         <div class="avator">
@@ -63,48 +65,54 @@
         </div>
         <div class="char_name">name 02
         </div>
-        <div class="char_health">health: <p id="char_health_point_1">10</p>
+        <div class="char_health">health: <p id="char_health_point_2">10</p>
         </div>
-        <div class="char_energy">energy: <p id="char_energy_point_1">20</p>
+        <div class="char_energy">energy: <p id="char_energy_point_2">20</p>
         </div>
-        <div class="char_stress">stress: <p id="char_stress_point_1">21</p>
+        <div class="char_stress">stress: <p id="char_stress_point_2">21</p>
         </div>
-        <div class="char_intoxication">intoxication: <p id="char_intoxication_point_1">9</p>
+        <div class="char_intoxication">intoxication: <p id="char_intoxication_point_2">9</p>
+        </div>
+        <div class="char_warning"><p id="char_warning_msg_2">passing out!</p>
         </div>
     </div>
     <div id="player03" class="playerclass">
         <div class="avator">
             <img src="http://www.kinghim.com/image/avator2.jpg"/>
         </div>
-        <div class="char_name">
+        <div class="char_name">name 03
         </div>
-        <div class="char_health">health: <p id="char_health_point_1">10</p>
+        <div class="char_health">health: <p id="char_health_point_3">10</p>
         </div>
-        <div class="char_energy">energy: <p id="char_energy_point_1">20</p>
+        <div class="char_energy">energy: <p id="char_energy_point_3">20</p>
         </div>
-        <div class="char_stress">stress: <p id="char_stress_point_1">21</p>
+        <div class="char_stress">stress: <p id="char_stress_point_3">21</p>
         </div>
-        <div class="char_intoxication">intoxication: <p id="char_intoxication_point_1">9</p>
+        <div class="char_intoxication">intoxication: <p id="char_intoxication_point_3">9</p>
+        </div>
+        <div class="char_warning"><p id="char_warning_msg_3">bored!</p>
         </div>
     </div>
     <div id="player04" class="playerclass">
         <div class="avator">
             <img src="http://www.kinghim.com/image/avator1.jpg"/>
         </div>
-        <div class="char_name">
+        <div class="char_name"> name 04
         </div>
-        <div class="char_health">health: <p id="char_health_point_1">100</p>
+        <div class="char_health">health: <p id="char_health_point_4">100</p>
         </div>
-        <div class="char_energy">energy: <p id="char_energy_point_1">100</p>
+        <div class="char_energy">energy: <p id="char_energy_point_4">100</p>
         </div>
-        <div class="char_stress">stress: <p id="char_stress_point_1">21</p>
+        <div class="char_stress">stress: <p id="char_stress_point_4">21</p>
         </div>
-        <div class="char_intoxication">intoxication: <p id="char_intoxication_point_1">9</p>
+        <div class="char_intoxication">intoxication: <p id="char_intoxication_point_4">9</p>
+        </div>
+        <div class="char_warning"><p id="char_warning_msg_4">sleeping!</p>
         </div>
     </div>
 </div>
 <div id="rightcontent">
-    <div>
+    <div class="campusarea">
     </div>
 </div>
 </body>
