--- a/src/index.html
+++ b/src/index.html
@@ -1,122 +1,112 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-<link rel="stylesheet" type="text/css" href="mainstyle.css">
-<script type="text/javascript" src="mainscript.js"></script>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Simulator">
+  <meta name="author" content="Still Compiling">
+  <title>Dynamic Data</title>
+  <!-- Bootstrap Core CSS -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/game.css" rel="stylesheet">
+  <style>
+    body {padding-top: 10px;}
+  </style>
 </head>
+
 <body>
-<div id="indicatorhead">
-    <div class="indicatorblock" id="indicatorblock01" align="center">
-        <div class="barframe">
-            <div id="number_of_bugs" class="inbarframe"></div>
-        </div>
+  <!-- main content -->
+  <div class="container superwide" id="">
+    <div class="row">
+      <h4>
+      <div class="col-sm-3" id="bugsDiv">
+        Bugs: 9001
+      </div>
+      <div class="col-sm-3" id="codesizeDiv">
+        Code Size: 10MB
+      </div>
+      <div class="col-sm-3" id="coolnessDiv">
+        Coolness: 3000
+      </div>
+      <div class="col-sm-3" id="timerDiv">
+        Time Remaining: 02:15
+      </div>
+      <br>
+      </h4>
     </div>
-    <div class="indicatorblock" id="indicatorblock02" align="center">
-        <div class="barframe">
-            <div id="code_size" class="inbarframe"><p>12</p></div>
+    <div class="row">
+      <div class="col-sm-3" id="teamDiv" style="height: 50vw; max-height:600px; background-color:blue;">
+        <div class="teamMember">
+          Bob
         </div>
+        <div class="teamMember">
+          Jim
+        </div>
+        <div class="teamMember">
+          Tony
+        </div>
+        <div class="teamMember">
+          Joe
+        </div>
+      </div>
+      <div class="col-sm-9" id="mainDiv" style="background-color:red;height: 50vw;max-height:600px">
+        <div class="area">
+          Sofa
+        </div>
+        <div class="area big">
+          Computer
+        </div>
+        <div class="area">
+          Whiteboard
+        </div>
+        <div class="area">
+          Conference room
+        </div>
+        <div class="area">
+          Test Area
+        </div>
+        <div class="area">
+          Smoking Area
+        </div>
+        <div class="area">
+          Pub
+        </div>
+        <div class="area">
+          Shop
+        </div>
+      </div>
     </div>
-    <div class="indicatorblock" id="indicatorblock03" align="center">
-        <div class="barframe">
-            <div id="timers" class="inbarframe"><p>47</p></div>
+  </div>
+  <!-- Footer -->
+  <div class="container superwide">
+    <hr>
+    <footer>
+      <div class="row">
+        
+        <div class="col-lg-12">
+          <p><a href="https://github.com/dooglz/SEC15">SEC Simulator 2015</a> - Still Compiling</p>
+          <div id="libCredits">
+            This Project makes use of the following libraries:
+            <ul class="list-inline">
+              <li>
+                <a href="http://getbootstrap.com/">Bootstrap</a>
+              </li>
+              <li>
+                <a href="http://jquery.com/">jQuery</a>
+              </li>
+            </ul>
+          </div>
         </div>
-    </div>
-    <div class="indicatorblock" id="indicatorblock04" align="center">
-        <div class="barframe">
-            <div id="timers" class="inbarframe"><p>86</p></div>
-        </div>
-    </div>
-</div>
-<div id="indicatortitle">
-    <div class="indicatortitleblock" id="indicatortitle01">
-        <p>number of bugs</p>
-    </div>
-    <div class="indicatortitleblock" id="indicatortitle02">
-        <p>code size</p>
-    </div>
-    <div class="indicatortitleblock" id="indicatortitle03">
-        <p>Timers</p>
-    </div>
-    <div class="indicatortitleblock" id="indicatortitle04">
-        <p>coolness</p>
-    </div>
-</div>
-<div id="leftcontent">
-    <div id="player01" class="playerclass">
-        <div class="avator">
-            <img src="http://www.kinghim.com/image/avator1.jpg"/>
-        </div>
-        <div class="char_name">name 01
-        </div>
-        <div class="char_health">health: <p id="char_health_point_1">10</p>
-        </div>
-        <div class="char_energy">energy: <p id="char_energy_point_1">20</p>
-        </div>
-        <div class="char_stress">stress: <p id="char_stress_point_1">21</p>
-        </div>
-        <div class="char_intoxication">intoxication: <p id="char_intoxication_point_1">9</p>
-        </div>
-        <div class="char_warning"><p id="char_warning_msg_1">drunk!</p>
-        </div>
-    </div>
-    <div id="player02" class="playerclass">
-        <div class="avator">
-            <img src="http://www.kinghim.com/image/avator2.jpg" />
-        </div>
-        <div class="char_name">name 02
-        </div>
-        <div class="char_health">health: <p id="char_health_point_2">10</p>
-        </div>
-        <div class="char_energy">energy: <p id="char_energy_point_2">20</p>
-        </div>
-        <div class="char_stress">stress: <p id="char_stress_point_2">21</p>
-        </div>
-        <div class="char_intoxication">intoxication: <p id="char_intoxication_point_2">9</p>
-        </div>
-        <div class="char_warning"><p id="char_warning_msg_2">passing out!</p>
-        </div>
-    </div>
-    <div id="player03" class="playerclass">
-        <div class="avator">
-            <img src="http://www.kinghim.com/image/avator2.jpg"/>
-        </div>
-        <div class="char_name">name 03
-        </div>
-        <div class="char_health">health: <p id="char_health_point_3">10</p>
-        </div>
-        <div class="char_energy">energy: <p id="char_energy_point_3">20</p>
-        </div>
-        <div class="char_stress">stress: <p id="char_stress_point_3">21</p>
-        </div>
-        <div class="char_intoxication">intoxication: <p id="char_intoxication_point_3">9</p>
-        </div>
-        <div class="char_warning"><p id="char_warning_msg_3">bored!</p>
-        </div>
-    </div>
-    <div id="player04" class="playerclass">
-        <div class="avator">
-            <img src="http://www.kinghim.com/image/avator1.jpg"/>
-        </div>
-        <div class="char_name"> name 04
-        </div>
-        <div class="char_health">health: <p id="char_health_point_4">100</p>
-        </div>
-        <div class="char_energy">energy: <p id="char_energy_point_4">100</p>
-        </div>
-        <div class="char_stress">stress: <p id="char_stress_point_4">21</p>
-        </div>
-        <div class="char_intoxication">intoxication: <p id="char_intoxication_point_4">9</p>
-        </div>
-        <div class="char_warning"><p id="char_warning_msg_4">sleeping!</p>
-        </div>
-    </div>
-</div>
-<div id="rightcontent">
-    <div class="campusarea">
-    </div>
-</div>
-<script src="js/jquery-2.1.4.min.js"></script>
-<script src="js/main.js"></script>
-<script src="js/code.js"></script>
+      </div>
+    </footer>
+  </div>
+  <!-- Page End -->
+  <script src="js/jquery-2.1.4.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/main.js"></script>
+  <script src="js/code.js"></script>
 </body>
+
 </html>
