--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,36 +21,108 @@
 <body>
   <!-- main content -->
   <div class="container superwide" id="">
-    <div class="row">
+    <div class="row" style="text-align: center;">
       <h4>
       <div class="col-sm-3" id="bugsDiv">
-        Bugs: 9001
+        Bugs<br>9001
       </div>
       <div class="col-sm-3" id="codesizeDiv">
-        Code Size: 10MB
+        Code Size<br>10MB
       </div>
       <div class="col-sm-3" id="coolnessDiv">
-        Coolness: 3000
+        Coolness<br>3000
       </div>
       <div class="col-sm-3" id="timerDiv">
-        Time Remaining: 02:15
+        Time Remaining<br>02:15
       </div>
-      <br>
+      <br><br>
       </h4>
     </div>
     <div class="row">
       <div class="col-sm-3" id="teamDiv" style="height: 50vw; max-height:600px; background-color:blue;">
-        <div class="teamMember"id="team0">
-          Bob
+        <div class="teamMember" id="teamMember1Div">
+          <div class="teamMemberName" id="teamMember1NameDiv">Bob</div>
+          <div class="progress">
+            <div class="progress-bar progress-bar-success" id="teamMember1EnergyDiv" role="progressbar" aria-valuenow="100" aria-valuemin="0"
+            aria-valuemax="100" style="width:100%">
+              Energy
+            </div>
+          </div>
+          <div class="progress">
+            <div class="progress-bar progress-bar-danger" id="teamMember1StressDiv" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+            aria-valuemax="100" style="width:70%">
+              Stress
+            </div>
+          </div>
+          <div class="progress">
+            <div class="progress-bar progress-bar-info" id="teamMember1DrunkDiv" role="progressbar" aria-valuenow="30" aria-valuemin="0"
+            aria-valuemax="100" style="width:70%">
+              Intoxication
+            </div>
+          </div>
         </div>
-        <div class="teamMember" id="team1">
-          Jim
+        <div class="teamMember" id="teamMember2Div">
+          <div class="teamMemberName" id="teamMember2NameDiv">Jim</div>
+          <div class="progress">
+            <div class="progress-bar progress-bar-success" id="teamMember2EnergyDiv" role="progressbar" aria-valuenow="100" aria-valuemin="0"
+            aria-valuemax="100" style="width:100%">
+              Energy
+            </div>
+          </div>
+          <div class="progress">
+            <div class="progress-bar progress-bar-danger" id="teamMember2StressDiv" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+            aria-valuemax="100" style="width:70%">
+              Stress
+            </div>
+          </div>
+          <div class="progress">
+            <div class="progress-bar progress-bar-info" id="teamMember2DrunkDiv" role="progressbar" aria-valuenow="30" aria-valuemin="0"
+            aria-valuemax="100" style="width:70%">
+              Intoxication
+            </div>
+          </div>
         </div>
-        <div class="teamMember" id="team2">
-          Tony
+        <div class="teamMember" id="teamMember3Div">
+          <div class="teamMemberName" id="teamMember3NameDiv">Joe</div>
+          <div class="progress">
+            <div class="progress-bar progress-bar-success" id="teamMember3EnergyDiv" role="progressbar" aria-valuenow="50" aria-valuemin="0"
+            aria-valuemax="100" style="width:50%">
+              Energy
+            </div>
+          </div>
+          <div class="progress">
+            <div class="progress-bar progress-bar-danger" id="teamMember3StressDiv" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+            aria-valuemax="100" style="width:70%">
+              Stress
+            </div>
+          </div>
+          <div class="progress">
+            <div class="progress-bar progress-bar-info" id="teamMember3DrunkDiv" role="progressbar" aria-valuenow="30" aria-valuemin="0"
+            aria-valuemax="100" style="width:70%">
+              Intoxication
+            </div>
+          </div>
         </div>
-        <div class="teamMember" id="team3">
-          Joe
+        <div class="teamMember" id="teamMember4Div">
+          <div class="teamMemberName" id="teamMember4NameDiv">Steve</div>
+          <div class="progress">
+            <div class="progress-bar progress-bar-success" id="teamMember4EnergyDiv" role="progressbar" aria-valuenow="10" aria-valuemin="0"
+            aria-valuemax="100" style="width:10%">
+              Energy
+            </div>
+          </div>
+          <div class="progress">
+            <div class="progress-bar progress-bar-danger" id="teamMember4StressDiv" role="progressbar" aria-valuenow="10" aria-valuemin="0"
+            aria-valuemax="100" style="width:10%">
+              Stress
+            </div>
+          </div>
+          <div class="progress">
+            <div class="progress-bar progress-bar-info" id="teamMember4DrunkDiv" role="progressbar" aria-valuenow="10" aria-valuemin="0"
+            aria-valuemax="100" style="width:10%">
+              Intoxication
+            </div>
+          </div>
         </div>
       </div>
       <div class="col-sm-9" id="mainDiv" style="background-color:red;height: 50vw;max-height:600px">
@@ -109,7 +182,6 @@
     <hr>
     <footer>
       <div class="row">
-
         <div class="col-lg-12">
           <p><a href="https://github.com/dooglz/SEC15">SEC Simulator 2015</a> - Still Compiling</p>
           <div id="libCredits">
