--- a/src/index.html
+++ b/src/index.html
@@ -44,19 +44,19 @@
           <div class="teamMemberName" id="teamMember1NameDiv">Bob</div>
           <div class="progress">
             <div class="progress-bar progress-bar-success" id="teamMember1EnergyDiv" role="progressbar" aria-valuenow="100" aria-valuemin="0"
-            aria-valuemax="100" style="width:100%">
+            aria-valuemax="100" style="width:100%;">
               Energy
             </div>
           </div>
           <div class="progress">
             <div class="progress-bar progress-bar-danger" id="teamMember1StressDiv" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-            aria-valuemax="100" style="width:70%">
+            aria-valuemax="100" style="width:70%;">
               Stress
             </div>
           </div>
           <div class="progress">
             <div class="progress-bar progress-bar-info" id="teamMember1DrunkDiv" role="progressbar" aria-valuenow="30" aria-valuemin="0"
-            aria-valuemax="100" style="width:70%">
+            aria-valuemax="100" style="width:70%;">
               Intoxication
             </div>
           </div>
