Html changes for motivation bar

--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,14 @@
               Intoxication
             </div>
           </div>
+          <div class="progress">
+            <div class="progress-bar progress-bar-info" id="teamMember1MotivationDiv" role="progressbar" aria-valuenow="30" aria-valuemin="0"
+            aria-valuemax="100" style="width:70%;">
+              motivation
+            </div>
+          </div>
         </div>
+        
         <div class="teamMember" id="teamMember2Div">
           <div class="teamMemberName" id="teamMember2NameDiv">Jim</div>
           <div class="progress">
@@ -79,6 +86,12 @@
             <div class="progress-bar progress-bar-info" id="teamMember2DrunkDiv" role="progressbar" aria-valuenow="30" aria-valuemin="0"
             aria-valuemax="100" style="width:70%">
               Intoxication
+            </div>
+          </div>
+          <div class="progress">
+            <div class="progress-bar progress-bar-info" id="teamMember1MotivationDiv" role="progressbar" aria-valuenow="30" aria-valuemin="0"
+            aria-valuemax="100" style="width:70%;">
+              motivation
             </div>
           </div>
         </div>
@@ -102,6 +115,12 @@
               Intoxication
             </div>
           </div>
+                    <div class="progress">
+            <div class="progress-bar progress-bar-info" id="teamMember1MotivationDiv" role="progressbar" aria-valuenow="30" aria-valuemin="0"
+            aria-valuemax="100" style="width:70%;">
+              motivation
+            </div>
+          </div>
         </div>
         <div class="teamMember" id="teamMember4Div">
           <div class="teamMemberName" id="teamMember4NameDiv">Steve</div>
@@ -121,6 +140,12 @@
             <div class="progress-bar progress-bar-info" id="teamMember4DrunkDiv" role="progressbar" aria-valuenow="10" aria-valuemin="0"
             aria-valuemax="100" style="width:10%">
               Intoxication
+            </div>
+          </div>
+                    <div class="progress">
+            <div class="progress-bar progress-bar-info" id="teamMember1MotivationDiv" role="progressbar" aria-valuenow="30" aria-valuemin="0"
+            aria-valuemax="100" style="width:70%;">
+              motivation
             </div>
           </div>
         </div>
