--- a/src/index.html
+++ b/src/index.html
@@ -44,25 +44,25 @@
           <div class="teamMemberName" id="teamMember1NameDiv">Bob</div>
           <div class="progress">
             <div class="progress-bar progress-bar-success" id="teamMember1EnergyDiv" role="progressbar" aria-valuenow="100" aria-valuemin="0"
-            aria-valuemax="100" style="width:100%;">
+            aria-valuemax="100" style="width:0%;">
               Energy
             </div>
           </div>
           <div class="progress">
             <div class="progress-bar progress-bar-danger" id="teamMember1StressDiv" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-            aria-valuemax="100" style="width:70%;">
+            aria-valuemax="100" style="width:0%;">
               Stress
             </div>
           </div>
           <div class="progress">
             <div class="progress-bar progress-bar-info" id="teamMember1DrunkDiv" role="progressbar" aria-valuenow="30" aria-valuemin="0"
-            aria-valuemax="100" style="width:70%;">
+            aria-valuemax="100" style="width:0%;">
               Intoxication
             </div>
           </div>
           <div class="progress">
             <div class="progress-bar progress-bar-info" id="teamMember1MotivationDiv" role="progressbar" aria-valuenow="30" aria-valuemin="0"
-            aria-valuemax="100" style="width:70%;">
+            aria-valuemax="100" style="width:0%;">
               motivation
             </div>
           </div>
@@ -72,25 +72,25 @@
           <div class="teamMemberName" id="teamMember2NameDiv">Jim</div>
           <div class="progress">
             <div class="progress-bar progress-bar-success" id="teamMember2EnergyDiv" role="progressbar" aria-valuenow="100" aria-valuemin="0"
-            aria-valuemax="100" style="width:100%">
+            aria-valuemax="100" style="width:0%">
               Energy
             </div>
           </div>
           <div class="progress">
             <div class="progress-bar progress-bar-danger" id="teamMember2StressDiv" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-            aria-valuemax="100" style="width:70%">
+            aria-valuemax="100" style="width:0%">
               Stress
             </div>
           </div>
           <div class="progress">
             <div class="progress-bar progress-bar-info" id="teamMember2DrunkDiv" role="progressbar" aria-valuenow="30" aria-valuemin="0"
-            aria-valuemax="100" style="width:70%">
+            aria-valuemax="100" style="width:0%">
               Intoxication
             </div>
           </div>
           <div class="progress">
             <div class="progress-bar progress-bar-info" id="teamMember1MotivationDiv" role="progressbar" aria-valuenow="30" aria-valuemin="0"
-            aria-valuemax="100" style="width:70%;">
+            aria-valuemax="100" style="width:0%;">
               motivation
             </div>
           </div>
@@ -99,25 +99,25 @@
           <div class="teamMemberName" id="teamMember3NameDiv">Joe</div>
           <div class="progress">
             <div class="progress-bar progress-bar-success" id="teamMember3EnergyDiv" role="progressbar" aria-valuenow="50" aria-valuemin="0"
-            aria-valuemax="100" style="width:50%">
+            aria-valuemax="100" style="width:0%">
               Energy
             </div>
           </div>
           <div class="progress">
             <div class="progress-bar progress-bar-danger" id="teamMember3StressDiv" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-            aria-valuemax="100" style="width:70%">
+            aria-valuemax="100" style="width:0%">
               Stress
             </div>
           </div>
           <div class="progress">
             <div class="progress-bar progress-bar-info" id="teamMember3DrunkDiv" role="progressbar" aria-valuenow="30" aria-valuemin="0"
-            aria-valuemax="100" style="width:70%">
+            aria-valuemax="100" style="width:0%">
               Intoxication
             </div>
           </div>
                     <div class="progress">
             <div class="progress-bar progress-bar-info" id="teamMember1MotivationDiv" role="progressbar" aria-valuenow="30" aria-valuemin="0"
-            aria-valuemax="100" style="width:70%;">
+            aria-valuemax="100" style="width:0%;">
               motivation
             </div>
           </div>
@@ -126,25 +126,25 @@
           <div class="teamMemberName" id="teamMember4NameDiv">Steve</div>
           <div class="progress">
             <div class="progress-bar progress-bar-success" id="teamMember4EnergyDiv" role="progressbar" aria-valuenow="10" aria-valuemin="0"
-            aria-valuemax="100" style="width:10%">
+            aria-valuemax="100" style="width:0%">
               Energy
             </div>
           </div>
           <div class="progress">
             <div class="progress-bar progress-bar-danger" id="teamMember4StressDiv" role="progressbar" aria-valuenow="10" aria-valuemin="0"
-            aria-valuemax="100" style="width:10%">
+            aria-valuemax="100" style="width:0%">
               Stress
             </div>
           </div>
           <div class="progress">
             <div class="progress-bar progress-bar-info" id="teamMember4DrunkDiv" role="progressbar" aria-valuenow="10" aria-valuemin="0"
-            aria-valuemax="100" style="width:10%">
+            aria-valuemax="100" style="width:0%">
               Intoxication
             </div>
           </div>
                     <div class="progress">
             <div class="progress-bar progress-bar-info" id="teamMember1MotivationDiv" role="progressbar" aria-valuenow="30" aria-valuemin="0"
-            aria-valuemax="100" style="width:70%;">
+            aria-valuemax="100" style="width:0%;">
               motivation
             </div>
           </div>
@@ -154,6 +154,27 @@
       </div>
     </div>
   </div>
+  
+  <div id="myModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Your game has been judged</h4>
+      </div>
+      <div class="modal-body">
+        <p>You did not win</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
+  </div>
+</div>
+  
   <!-- Footer -->
   <div class="container superwide">
     <hr>
