--- a/src/index.html
+++ b/src/index.html
@@ -115,7 +115,7 @@
               Intoxication
             </div>
           </div>
-                    <div class="progress">
+          <div class="progress">
             <div class="progress-bar progress-bar-info" id="teamMember1MotivationDiv" role="progressbar" aria-valuenow="30" aria-valuemin="0"
             aria-valuemax="100" style="width:0%;">
               motivation
@@ -151,6 +151,9 @@
         </div>
       </div>
       <div class="col-sm-9" id="mainDiv" style="background-color:red;height: 50vw;max-height:600px">
+        <div class="teamChoice" id="TeamChoiceDiv">
+          <div class="teamChoiceHeadder">Select your team</div>
+        </div>
       </div>
     </div>
   </div>
